--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.EditLocationActivity"
+            android:name=".views.editlocation.EditLocationActivity"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".activities.PlacemarkMapsActivity"
             android:label="@string/title_activity_placemark_maps"
             android:theme="@style/AppTheme"></activity>
 
-        <activity android:name=".activities.PlacemarkActivity" />
-        <activity android:name=".activities.PlacemarkListActivity">
+        <activity android:name=".views.placemark.PlacemarkView" />
+        <activity android:name=".views.placemarklist.PlacemarkListView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
