--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".views.editlocation.EditLocationActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".activities.PlacemarkMapsActivity"
+            android:name=".activities.PlacemarkMapView"
             android:label="@string/title_activity_placemark_maps"
             android:theme="@style/AppTheme"></activity>
 
