--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: "kotlin-kapt"
+
+apply plugin: 'com.google.gms.google-services'
+
+androidExtensions {
+    experimental = true
+}
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -12,7 +20,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,23 +30,45 @@ android {
     }
 }
 
-androidExtensions {
-    experimental = true
+ext {
+    app_compat_version = '1.0.2'
+    constraint_layout_version = '2.0.0-alpha2'
+    material_version = '1.0.0'
+    cardview_version = '1.0.0'
+    design_library_version = '26.1.0'
+    support_library_version = '26.1.0'
+
+    play_services_maps_version = '16.0.0'
+    play_services_location_version = '16.0.0'
+
+    anko_version = '0.10.7'
+    anko_commons_version = '0.10.7'
+    gson_version = '2.8.5'
+
+    room_version = "2.0.0"
+    firebase_version = '16.0.5'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation "com.google.android.gms:play-services-location:16.0.0"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0-rc02'
-    implementation 'org.jetbrains.anko:anko:0.10.5'
-    implementation 'org.jetbrains.anko:anko-commons:0.10.5'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "androidx.appcompat:appcompat:$app_compat_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.cardview:cardview:$cardview_version"
+    implementation "com.google.android.gms:play-services-maps:$play_services_maps_version"
+    implementation "com.google.android.gms:play-services-location:$play_services_location_version"
+    implementation "org.jetbrains.anko:anko-commons:$anko_commons_version"
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "com.google.firebase:firebase-auth:$firebase_version"
+    implementation "com.google.firebase:firebase-database:$firebase_version"
+
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
 }
